@@ -1,5 +1,11 @@
 This is the Changelog for amavisd-milter.
 
+20051204:
+	Some users reports problem with ENOMEM in amavis_response().
+	Consequently MAXAMABUF is increased from 1024 to 2048, amavis_request()
+	and amavis_response() returns EOVERFLOW when buffer size isn't enough
+	and truncated response is logged when debug level is >= 3.
+
 20051202:
 	Fixed default path to pidfile in README and website.
 	Submitted by: Jerzy Sakol <jerzy.sakol@commgraf.pl>
@@ -55,4 +61,4 @@ This is the Changelog for amavisd-milter.
 	First public release. Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.11 2005/08/28 23:56:38 reho Exp $
+$Id: CHANGES,v 1.12 2005/12/04 13:52:36 reho Exp $
